[package]
name = "egglog_python"
version = "13.1.0"
edition = "2024"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "egglog"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module", "num-bigint", "num-rational", "indexmap"] }
num-bigint = "*"
num-rational = "*"
indexmap = "2.12"
opentelemetry = "0.28"
opentelemetry-otlp = { version = "0.28", features = ["http-proto", "reqwest-blocking-client", "trace"] }
opentelemetry-stdout = { version = "0.28", features = ["trace"] }
opentelemetry_sdk = "0.28"
egglog = { git = "https://github.com/egraphs-good/egglog.git", default-features = false, rev = "b5c211b9def133cad9540a11744e8a1e40bd2a29" }
egglog-ast = { git = "https://github.com/egraphs-good/egglog.git", rev = "b5c211b9def133cad9540a11744e8a1e40bd2a29" }
egglog-core-relations = { git = "https://github.com/egraphs-good/egglog.git", rev = "b5c211b9def133cad9540a11744e8a1e40bd2a29" }
egglog-reports = { git = "https://github.com/egraphs-good/egglog.git", rev = "b5c211b9def133cad9540a11744e8a1e40bd2a29" }
egglog-bridge = { git = "https://github.com/egraphs-good/egglog.git", rev = "b5c211b9def133cad9540a11744e8a1e40bd2a29" }


egglog-experimental = { git = "https://github.com/egraphs-good/egglog-experimental.git", default-features = false, rev = "3f38efab7307b765bdb912b81e99736f27e00b1f" }
egraph-serialize = { version = "0.3", features = ["serde", "graphviz"] }
serde_json = "1"
pyo3-log =  "*"
log = "0.4"
lalrpop-util = { version = "0.22", features = ["lexer"] }
ordered-float = "5"
tracing = "0.1"
tracing-opentelemetry = "0.29"
tracing-subscriber = "0.3"
uuid = { version = "1.18", features = ["v4"] }
rayon = "1.11"
base64 = "0.22.1"


# enable debug symbols for easier profiling
[profile.release]
debug = true
