[package]
name = "egglog_python"
version = "13.1.0"
edition = "2024"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "egglog"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module", "num-bigint", "num-rational", "indexmap"] }
num-bigint = "*"
num-rational = "*"
indexmap = "2.12"
opentelemetry = "0.28"
opentelemetry-otlp = { version = "0.28", features = ["http-proto", "reqwest-blocking-client", "trace"] }
opentelemetry-stdout = { version = "0.28", features = ["trace"] }
opentelemetry_sdk = "0.28"
egglog = { path = "../egg-smol", default-features = false }
egglog-ast = { path = "../egg-smol/egglog-ast" }
egglog-core-relations = { path = "../egg-smol/core-relations" }
egglog-reports = { path = "../egg-smol/egglog-reports" }
egglog-bridge = { path = "../egg-smol/egglog-bridge" }


egglog-experimental = { path = "../egglog-experimental", default-features = false }
egraph-serialize = { version = "0.3", features = ["serde", "graphviz"] }
serde_json = "1"
pyo3-log =  "*"
log = "0.4"
lalrpop-util = { version = "0.22", features = ["lexer"] }
ordered-float = "5"
tracing = "0.1"
tracing-opentelemetry = "0.29"
tracing-subscriber = "0.3"
uuid = { version = "1.18", features = ["v4"] }
rayon = "1.11"
base64 = "0.22.1"


# enable debug symbols for easier profiling
[profile.release]
debug = true

[patch."https://github.com/egraphs-good/egglog.git"]
egglog = { path = "../egg-smol", default-features = false }
egglog-ast = { path = "../egg-smol/egglog-ast" }
egglog-core-relations = { path = "../egg-smol/core-relations" }
egglog-reports = { path = "../egg-smol/egglog-reports" }
egglog-bridge = { path = "../egg-smol/egglog-bridge" }
